[gd_scene load_steps=7 format=2]

[ext_resource path="res://rooms/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/game designs/Start Menu/Start.png" type="Texture" id=2]
[ext_resource path="res://assets/menu/background1.jpg" type="Texture" id=3]
[ext_resource path="res://assets/game designs/Start Menu/Quit Select.png" type="Texture" id=4]
[ext_resource path="res://assets/game designs/Start Menu/Start Select.png" type="Texture" id=5]
[ext_resource path="res://assets/game designs/Start Menu/Quit.png" type="Texture" id=6]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 0.666591, 0.667787 )
texture = ExtResource( 3 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0351
margin_top = -10.0701
margin_right = 1286.04
margin_bottom = 709.93
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 20.0
margin_right = 974.0
margin_bottom = 1090.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 16

[node name="TitleImage" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 974.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 974.0
margin_bottom = 1114.0
rect_scale = Vector2( 0.3, 0.4 )

[node name="StartGame" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 974.0
margin_bottom = 525.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 5 )

[node name="QuitGame" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 529.0
margin_right = 974.0
margin_bottom = 1054.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 4 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
